chore: update get users doc
